[package]
name = "apistonks"
version = "0.1.0"
authors = ["Anicet Nougaret"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "apistonks"

[dependencies]
actix-web = "4.0.0-beta.3"
reqwest = "0.11"
serde = "1.0.123"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
